# screenshotgenerator

./: .gitignore  README.md  click_enum_type.py  common.py  generate.py  requirements.txt  train.py
lib/: LICENSE  README.md  pyproject.toml
lib/src/screenshotgenerator/: __init__.py  defaults.py  generate.py  portrait_preference.py  screenshot.py
package/: README.md  pyproject.toml
package/src/screenshotgenerator/: __init__.py  cli.py  common.py  defaults.py  generate.py  screenshotgenerator.py  screenshotselector.py  select.py
training/: requirements.txt  train.py
